<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60px"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="420px"
            android:layout_height="420px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120px"
            android:background="@drawable/ic_touxiang"/>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="160px"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="150px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_login_pwd"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_login_pwd"
                    android:textColor="@color/white"
                    android:textSize="54px"/>

                <TextView
                    android:id="@+id/tv_login_code"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/txt_login_code"
                    android:textColor="@color/txt_login_hint"
                    android:textSize="54px"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/view_line_left"
                    android:layout_width="0dp"
                    android:layout_height="10px"
                    android:layout_weight="1"
                    android:background="@color/color_view_line"
                    android:visibility="visible"/>

                <ImageView
                    android:id="@+id/view_line_right"
                    android:layout_width="0dp"
                    android:layout_height="10px"
                    android:layout_weight="1"
                    android:background="@color/color_view_line"
                    android:visibility="invisible"/>

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222227"
        android:orientation="vertical"
        android:paddingTop="25px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_phone"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:background="@null"
                android:hint="@string/et_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_input_pwd"/>

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:background="@null"
                android:hint="@string/et_input_pwd"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_code"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_pwd"/>

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/txt_input_code"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

            <Button
                android:id="@+id/btn_code"
                android:layout_width="288px"
                android:layout_height="146px"
                android:background="@drawable/shape_code_button"
                android:text="@string/txt_get_code"
                android:textColor="@color/txt_account_hint"
                android:textSize="40px"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="154px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="25px"
            android:background="@color/btn_bg_color"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="60px"/>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46px"
                android:layout_marginTop="20px"
                android:text="@string/txt_go_register"
                android:textColor="@color/txt_account_hint"
                android:textSize="36px"/>

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="46px"
                android:layout_marginTop="20px"
                android:text="@string/txt_forgot_pwd"
                android:textColor="@color/btn_bg_color"
                android:textSize="36px"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
