<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="175px"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_left"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_centerVertical="true"
            android:padding="40px"
            android:src="@drawable/ic_left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_toRightOf="@+id/iv_left"
            android:text="@string/txt_register_account"
            android:textColor="#ffffff"
            android:textSize="55px"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222227"
        android:orientation="vertical"
        android:paddingTop="25px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_phone"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:background="@null"
                android:hint="@string/et_input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_pwd"/>

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/txt_input_code"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

            <Button
                android:id="@+id/btn_code"
                android:layout_width="288px"
                android:layout_height="146px"
                android:background="@drawable/shape_code_button"
                android:text="@string/txt_get_code"
                android:textColor="@color/txt_login_hint"
                android:textSize="40px"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_input_pwd"/>

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

            <CheckBox
                android:id="@+id/cb_pwd"
                android:layout_width="120px"
                android:layout_height="120px"
                android:button="@drawable/cb_pwd"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="20px"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="150px"
                android:layout_height="match_parent"
                android:background="@drawable/ic_input_pwd"/>

            <EditText
                android:id="@+id/et_once_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5px"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_once_pwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/txt_login_hint"
                android:textSize="48px"/>

            <CheckBox
                android:id="@+id/cb_one_pwd"
                android:layout_width="120px"
                android:layout_height="120px"
                android:button="@drawable/cb_pwd"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="20px"
            android:background="#343339"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46px"
                android:layout_marginTop="20px"
                android:text="收不到短信? 请在"
                android:textSize="32px"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_toRightOf="@+id/tv1"
                android:text="60s"
                android:textSize="32px"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_toRightOf="@+id/tv2"
                android:text="后重试"
                android:textSize="32px"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="154px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="25px"
            android:background="@color/btn_bg_color"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="60px"/>

    </LinearLayout>

</LinearLayout>